# Bitral

./: .gitignore  CMakeLists.txt  License.txt  README.md  compile.csh  compile.sh  test.s
cmake/Modules/: FindLLVM.cmake
include/: Bitral.h  BitralConfig.h  BitralContext.h  CodeRegion.h  CompilerState.h  ConstantMemoryAddress.h  DestinationOperand.h  Immediate.h  MemoryAddress.h  MemoryStoredOperand.h  Operand.h  Register.h  RegisterMemoryAddress.h
samples/: CMakeLists.txt
samples/sal_vm/: CMakeLists.txt  RecFunctions.cpp  main.cpp  sal_assembler  sal_assembler.cpp
samples/sal_vm/include/: Globals.h  RecFunctions.h  RegisterCodes.h
src/: Bitral.cpp  BitralContext.cpp  CMakeLists.txt  CodeRegion.cpp  ConstantMemoryAddress.cpp  Immediate.cpp  Operand.cpp  Register.cpp  RegisterMemoryAddress.cpp
tests/: AddImmediateT.cpp  BasicBranchT.cpp  CMakeLists.txt  CreatRegMemAddress.cpp  CreateCloneRegT.cpp  CreateRegisterT.cpp  CreateSubRegT.cpp  GetConstMemAddress.cpp  MainObjectCreatT.cpp  StoreRegT.cpp  WriteToRegisterT.cpp  basic_branch  create_const_mem_address  create_reg_mem_address  create_register_test  create_sub_reg  main_object_creation_test  test.sal  write_to_reg
