cmake_minimum_required (VERSION 2.6)
project (bitral)
configure_file (
  "${PROJECT_SOURCE_DIR}/include/BitralConfig.h.in"
  "${PROJECT_BINARY_DIR}/include/BitralConfig.h"
)
set(BOOST_FLAGS "-DBOOST_NO_RTTI -DBOOST_NO_TYPEID -DBOOST_EXCEPTION_DISABLE -DBOOST_NO_EXCEPTIONS")
if (${CMAKE_BUILD_TYPE} STREQUAL "Release")
  add_definitions(${BOOST_FLAGS} `llvm-config --cxxflags` -fexceptions)
else (${CMAKE_BUILD_TYPE} STREQUAL "Release")
  add_definitions(${BOOST_FLAGS} -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -O0 -fvisibility-inlines-hidden -fexceptions -fPIC -Woverloaded-virtual -Wcast-qual)
endif (${CMAKE_BUILD_TYPE} STREQUAL "Release")
enable_testing()
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(samples)
add_test(main_object_creation_test ${CMAKE_CURRENT_BINARY_DIR}/tests/main_object_creation_test)
add_test(create_register_test ${CMAKE_CURRENT_BINARY_DIR}/tests/create_register_test)
add_test(create_const_mem_address ${CMAKE_CURRENT_BINARY_DIR}/tests/create_const_mem_address)
add_test(create_reg_mem_address ${CMAKE_CURRENT_BINARY_DIR}/tests/create_reg_mem_address)
#add_test(create_clone_reg ${CMAKE_CURRENT_BINARY_DIR}/tests/create_clone_reg)
add_test(create_sub_reg ${CMAKE_CURRENT_BINARY_DIR}/tests/create_sub_reg)
add_test(write_to_reg ${CMAKE_CURRENT_BINARY_DIR}/tests/write_to_reg)
add_test(basic_branch ${CMAKE_CURRENT_BINARY_DIR}/tests/basic_branch)
