include_directories(${PROJECT_SOURCE_DIR}/include)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
find_package(LLVM REQUIRED)
find_package(Boost REQUIRED)

IF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
  set (TEST_LIBS ${TEST_LIBS} bitral pthread dl)
ELSE ()
  set (TEST_LIBS ${TEST_LIBS} bitral pthread)
ENDIF ()
include_directories(${Boost_INCLUDE_DIR})
link_directories(${LLVM_LIBRARY_DIR})
add_executable(main_object_creation_test MainObjectCreatT.cpp)
add_executable(create_register_test CreateRegisterT.cpp)
add_executable(create_const_mem_address GetConstMemAddress.cpp)
add_executable(create_reg_mem_address CreatRegMemAddress.cpp)
add_executable(create_clone_reg CreateCloneRegT.cpp)
add_executable(create_sub_reg CreateSubRegT.cpp)
add_executable(write_to_reg WriteToRegisterT.cpp)
#add_executable(basic_branch BasicBranchT.cpp)

target_link_libraries(main_object_creation_test ${TEST_LIBS})
target_link_libraries(create_register_test ${TEST_LIBS})
target_link_libraries(create_const_mem_address ${TEST_LIBS})
target_link_libraries(create_reg_mem_address ${TEST_LIBS})
target_link_libraries(create_clone_reg ${TEST_LIBS})
target_link_libraries(create_sub_reg ${TEST_LIBS})
target_link_libraries(write_to_reg ${TEST_LIBS})
#target_link_libraries(basic_branch ${TEST_LIBS})
