cmake_minimum_required (VERSION 2.6)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
find_package(LLVM REQUIRED)
find_package(Boost REQUIRED)

set (TEST_LIBS ${TEST_LIBS} bitral pthread dl)
link_directories(${LLVM_LIBRARY_DIR})
include_directories (${Boost_INCLUDE_DIR})
#add_executable(sal_vm main.cpp RecFunctions.cpp)
add_executable(sal_assembler sal_assembler.cpp)
set(SAL_VM_INCLUDE "samples/sal_vm/include")
include_directories ("${CMAKE_SOURCE_DIR}/include")
include_directories ("${CMAKE_SOURCE_DIR}/${SAL_VM_INCLUDE}")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
#target_link_libraries(sal_vm ${TEST_LIBS})
